# libcitygml

./: .gitignore  .travis.yml  CMakeLists.txt  CTestTestfile.cmake  README  README.md  SpecsToCheck.md  TODO.md  citygml_to_libcitygml_mapping.graphml  libcitygml_classdiagram.graphml  travis.yml
.github/workflows/: cmake-multi-platform.yml
CMakeModules/: FindCityGML.cmake  FindIconv.cmake  FindXerces.cmake  ModuleInstall.cmake  citygml_api.h.in  cmake_uninstall.cmake.in
citygml2vrml/: CMakeLists.txt  citygml2vrml.cpp
data/: FZK-Haus-LoD0-KIT-IAI-KHH-B36-V1.gml  b1_lod2_s.gml  berlin_open_data_sample_data.citygml
data/systemTests/CityObjectsTypeMask/: BridgeAndBuilding.gml
include/: citygml.h  vecs.h
osgplugin/: CMakeLists.txt  CitygmlOsgViewer.cpp  PluginTest.cpp  ReaderWriterCityGML.cpp
sources/: .gitignore  CMakeLists.txt  citygml.pc.cmake  citygmlConfig.cmake.in  version.rc.in
sources/include/citygml/: address.h  appearance.h  appearancemanager.h  appearancetarget.h  appearancetargetdefinition.h  attributesmap.h  citygml.h  citygml_api.h  citygml_api.h.in  citygml_export.h  citygmlfactory.h  citygmllogger.h  citymodel.h  cityobject.h  cityobjectdeclerations.hpp  composite.h  enum_type_bitmask.h  envelope.h  externalreference.h  featureobject.h  geometry.h  geometrymanager.h  georeferencedtexture.h  implictgeometry.h  landuse.h  linearring.h  linestring.h  material.h  materialtargetdefinition.h  object.h  polygon.h  polygon_dummy.h  polygonmanager.h  rectifiedgridcoverage.h  rectifiedgridcoverage.hpp  tesselator.h  tesselator_dummy.h  tesselatorbase.h  texture.h  texturecoordinates.h  (+6 more)
sources/include/parser/: addressparser.h  appearanceelementparser.h  attributes.h  citygmldocumentparser.h  citygmlelementparser.h  citymodelelementparser.h  cityobjectelementparser.h  codelisthandlerxerces.h  delayedchoiceelementparser.h  documentlocation.h  elementparser.h  externalreferenceparser.h  geocoordinatetransformer.h  geometryelementparser.h  georeferencedtextureelementparser.h  gmlfeaturecollectionparser.h  gmlobjectparser.h  implicitgeometryelementparser.h  linearringelementparser.h  linestringelementparser.h  materialelementparser.h  nodetypes.h  parser.h  parserutils.hpp  polygonelementparser.h  rectifiedgridcoverageparser.h  sequenceparser.h  skipelementparser.h  textureassociationelementparser.h  textureelementparser.h  transform.h  unknownelementparser.h
sources/src/citygml/: address.cpp  appearance.cpp  appearancemanager.cpp  appearancetarget.cpp  attributesmap.cpp  citygmlfactory.cpp  citymodel.cpp  cityobject.cpp  composite.cpp  envelope.cpp  externalreference.cpp  featureobject.cpp  geometry.cpp  geometrymanager.cpp  georeferencedtexture.cpp  implictgeometry.cpp  landuse.cpp  linearring.cpp  linestring.cpp  material.cpp  materialtargetdefinition.cpp  object.cpp  polygon.cpp  polygon_dummy.cpp  polygonmanager.cpp  rectifiedgridcoverage.cpp  tesselator.cpp  tesselator_dummy.cpp  tesselatorbase.cpp  texture.cpp  texturecoordinates.cpp  texturetarget.cpp  texturetargetdefinition.cpp  transformmatrix.cpp
sources/src/parser/: addressparser.cpp  appearanceelementparser.cpp  attributes.cpp  citygmldocumentparser.cpp  citygmlelementparser.cpp  citymodelelementparser.cpp  cityobjectelementparser.cpp  cityobjectelementparser.cpp.autosave  codelisthandlerxerces.cpp  delayedchoiceelementparser.cpp  elementparser.cpp  externalreferenceparser.cpp  geocoordinatetransformer.cpp  geometryelementparser.cpp  georeferencedtextureelementparser.cpp  gmlfeaturecollectionparser.cpp  gmlobjectparser.cpp  implicitgeometryelementparser.cpp  linearringelementparser.cpp  linestringelementparser.cpp  materialelementparser.cpp  nodetypes.cpp  parser.cpp  parserlibxml2.cpp  parserxercesc.cpp  parserxercesc_dummy.cpp  polygonelementparser.cpp  rectifiedgridcoverageparser.cpp  sequenceparser.cpp  skipelementparser.cpp  textureassociationelementparser.cpp  textureelementparser.cpp  unknownelementparser.cpp
src/: CMakeLists.txt  citymodel.cpp  parser.cpp  parser.h  parserlibxml2.cpp  parserxercesc.cpp  tesselator.cpp  tesselator.h  transform.h  utils.h
systemTests/: CMakeLists.txt  CityObjectsTypeMaskTests.cpp  FileReadTests.cpp  systemTestsMain.cpp
test/: CMakeLists.txt  citygmltest.cpp
test/citygml2vrml/: CMakeLists.txt  citygml2vrml.cpp
test/osgplugin/: CMakeLists.txt  README  ReaderWriterCityGML.cpp
